# SeizureTransformer

./: .coverage  .dockerignore  .env  .gitignore  ACKNOWLEDGMENTS.md  ADDITIONAL_CALCULATIONS_NEEDED.md  AGENTS.md  ALL_REAL_SCORES_NO_MERGE.md  APPLICATION_ARCHITECTURE.md  BENCHMARK_RESULTS.md  CITATION.cff  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_REFACTORING.md  COMPARISON_VALIDITY.md  CRITICAL_ARCHITECTURE_TRUTH.md  CRITICAL_MERGE_GAP_ISSUE.md  CRITICAL_NEDC_BINARY_BUG.md  CRITICAL_PARAMETER_BUG_FINDINGS.md  CURRENT_CLEAN_SCORES.md  DOCKER_PLAN.md  Dockerfile  Dockerfile.gpu  Dockerfile.test  Dockerfile.working  EDF_BUG_FIX_PLAN.md  EVALUATION_BUG_REPORT.md  EVALUATION_RESULTS.md  EVALUATION_RESULTS_TABLE.md  FIGURE_TABLE_BRAINSTORM.md  FINAL_COMPLETE_RESULTS.md  FINAL_COMPREHENSIVE_RESULTS_TABLE.md  FINAL_COMPREHENSIVE_SCORES.md  FINAL_SCORES_COLLECTION.md  FINAL_VERIFIED_SCORES.md  FUTURE_TASK_NATIVE_TAES.md  IDEAL_REFERENCE_SEIZURE_TRANSFORMER_DATAFLOW.md  INTEGRATION_PLAN.md  LICENSE  MATHEMATICAL_COMPARISON_TEMPLE_VS_NATIVE.md  (+56 more)
.claude/: settings.local.json
.github/workflows/: nedc-conformance.yml
docker/: Dockerfile  Dockerfile.nedc  Dockerfile.test  Makefile.docker  README.md  docker-compose.yml  entrypoint.py
docker.old/: ARCHIVED.md  Dockerfile.inference  Dockerfile.minimal
docs/: CORE3_EPILEPSYBENCH_SZCORE.md  README.md  TEMPLE_DIVERGENCE_ANALYSIS.md  VENDORED_SOURCES.md
docs/analysis/: CRITICAL_ARCHITECTURE_TRUTH.md  EDF_BUG_FIX_PLAN.md  NEDC_SCORING_BUG_ANALYSIS.md  OVERLAP_FIX_CLEANUP_SUMMARY.md  PARAMETER_TUNING_ANALYSIS.md  PARITY_ACHIEVED_SUMMARY.md  README.md  SEIZURE_TRANSFORMER_DATAFLOW_TRACE.md
docs/archive/: CURRENT_CLEAN_SCORES.md  FINAL_COMPLETE_RESULTS.md  FINAL_COMPREHENSIVE_SCORES.md  FINAL_SCORES_COLLECTION.md  FINAL_VERIFIED_SCORES.md  README.md  README_ORIGINAL.md  README_V2.md  SWEEP_PRELIMINARY_RESULTS.md  TUNED_PARAMETERS_FINAL.md
docs/deployment/: APPLICATION_ARCHITECTURE.md  DOCKER_DEPLOYMENT_PLAN.md  DOCKER_FIX_PLAN.md
docs/evaluation/: EVALUATION_BUG_REPORT.md  EVALUATION_RESULTS.md  EVALUATION_RESULTS_TABLE.md  NEDC_METRICS_OVERVIEW.md  PARAMETER_TUNING_METHODOLOGY.md  README.md  SZCORE_INTEGRATION_PLAN.md  TABLE_VALIDATION_STATUS.md  TESTING_AND_VALIDATION.md  TUNING_RESULTS_TRACKER.md
docs/implementation/: NEDC_INTEGRATION_STATUS.md
docs/incidents/: CRITICAL_NEDC_BINARY_BUG.md
docs/planning/: NEDC_INTEGRATION_PLAN.md  OPERATIONAL_TUNING_PLAN.md  README.md  RESTRUCTURE_PLAN.md  SEIZURE_TRANSFORMER_TUNING_PLAN.md  TEMPLE_PARITY_FIX_PLAN.md
docs/policy/: CRITICAL_MERGE_GAP_ISSUE.md  MERGE_GAP_POLICY.md
docs/results/: ALL_REAL_SCORES_NO_MERGE.md  BENCHMARK_RESULTS.md  CORE3_EPILEPSYBENCH_SZCORE.md  FINAL_COMPREHENSIVE_RESULTS_TABLE.md  REAL_RESULTS_NO_MERGE.md
docs/status/: SINGLE_SOURCE_OF_TRUTH.md
docs/submissions/: EPILEPSY_BENCH_SUBMISSION.md  NOTE_TO_EPILEPSY_BENCH.md  README.md  UPSTREAM_ISSUE_DRAFT.md
docs/technical/: CHANNELS_AND_MONTAGE.md  FA_REPORTING_TECH_DEBT.md  FUTURE_TASK_NATIVE_TAES.md  IDEAL_REFERENCE_SEIZURE_TRANSFORMER_DATAFLOW.md  MERGE_GAP_POLICY.md  NEDC_EVALUATION_UNDERSTANDING.md  NEDC_INTEGRATION_PLAN.md  README.md  REPO_MAP.md  TECHNICAL_DEBT_NATIVE_SCORER.md
evaluation/: README.md  __init__.py
evaluation/nedc_eeg_eval/: CITATION.md  __init__.py
evaluation/nedc_scoring/: Makefile  README.md  convert_predictions.py  post_processing.py  run_full_evaluation.sh  run_nedc.py  run_nedc_scoring.py  setup_nedc_env.sh  sweep_operating_point.py  test_pipeline.py
evaluation/szcore_scoring/: README.md  __init__.py  convert_to_hedscore.py  run_szcore.py
evaluation/tusz/: eval_log.txt  results.json  run_tusz_eval.py  run_tusz_eval_v2.py
evaluation/utils/: edf_repair.py  enhance_evaluation_robustness.py  monitor_evaluation.sh
experiments/: README.md  evaluation_improvements.json
experiments/dev/: README.md
experiments/eval/: README.md  frozen_params.json
figures/: FIGURE_DATA_PREPARATION.md
figures/scripts/: config.py  fig1_optimized.py  fig3_optimized.py  fig4_optimized.py
literature/: README.md
literature/arxiv_submission/: 00_abstract.md  01_introduction.md  01_introduction_BRAINSTORMING.md  02_background.md  03_methods_evaluation.md  04_results.md  05_discussion.md  06_conclusion.md  07_reproducibility.md  08_acknowledgments.md  09_references.md  10_appendix.md  ARXIV_CONVERSION_CANONICAL.md  ARXIV_CONVERSION_GUIDE.md  CITATION_FIXES_REQUIRED.md  CITATION_VERIFICATION_REPORT.md  CLEAN_CONVERSION_CHAIN.sh  CLEAN_CONVERSION_CHAIN_REVIEW.sh  CONTRIBUTIONS_AND_NOVELTY.md  CONVERSION_SUCCESS_NOTES.md  CORE_1_SCORING_METHODOLOGIES.md  CORE_2_SEIZURETRANSFORMER_MODEL.md  CORE_4_NEDC_SOFTWARE.md  CORE_5_TUSZ_DATASET.md  CORE_SYNTHESIS.md  README.md  (+44 more)
scripts/: README.md  experiment_tracker.py  generate_paper_figures.py  investigate_channels.py  migrate_data.sh  test_edf_repair.py  test_viz_stack.py  validate_data.py  verify_channel_loading.py  visualize_results.py
seizure_evaluation/: README.md
tests/: __init__.py  test_convert_predictions.py  test_inference.py  test_mathematical_differences.py  test_nedc_simple.py  test_overlap_edge_cases.py  test_overlap_scorer.py  test_post_processing.py  test_run_nedc.py
(+248 files in other folders)
