[project]
name = "seizure-transformer-replication"
version = "0.1.0"
description = "Clean replication of SeizureTransformer paper results"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.14.1",
    "torch>=2.0.1",
    "epilepsy2bids>=0.0.6",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "mne>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ipython>=8.0.0",
    "jupyterlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"