[project]
name = "seizure-transformer-replication"
version = "0.1.0"
description = "Clean replication of SeizureTransformer paper results"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Clarity Digital Twin"},
]

dependencies = [
    "numpy>=1.25",
    "scipy>=1.14.1",
    "torch>=2.0.1",
    "epilepsy2bids>=0.0.6",
    "pyedflib>=0.1.30",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "mne>=1.5.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipython>=8.0.0",
    "jupyterlab>=4.0.0",
    "ruff>=0.7.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evaluation", "scripts"]

# Modern Python tooling configuration (2025 best practices)

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "wu_2025",  # Don't lint reference implementation
    "evaluation/nedc_eeg_eval",  # Exclude bundled NEDC binaries/libs
    "reference_repos",
    ".venv",
    "literature",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "E722",  # bare except (for robustness)
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["seizure_transformer_replication"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov=scripts",
    "--cov=evaluation",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
]
markers = [
    "nedc: Tests requiring NEDC binary (deselect with '-m \"not nedc\"')",
    "conformance: Conformance tests against official NEDC scorer",
    "integration: Integration tests for the pipeline",
    "clinical: Clinical validation tests",
    "slow: Tests that take > 30 seconds",
    "overlap: Tests for OVERLAP scorer implementation",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
